--- a/index.html
+++ b/index.html
@@ -3,27 +3,47 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>d026481i</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.5.6/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.5.6/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.5.6/firebase-database.js"></script>
-    <script defer src="/__/firebase/5.5.6/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.5.6/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--Custom CSS-->
+    <link rel="stylesheet" type="text/css" href="/Styles/landing.css">
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Styles/hangman.css" />
+    <title>Neildor - Stuff and Things</title>
   </head>
   <body>
-
-    <section id="section1">
-        <a href="Pages/hangman.html">HANGMAN</a>
-        <a href="Pages/guessTheNumber.html">GUESS THE NUMBER</a>
-    </section>
-    <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+    <div id="flex-container">
+      <div class="header">
+        <h1><strong>Neil Davis</strong></h1>
+      </div>
+      <div id="logo">
+          <img class="logo" src="Images/logo.png" alt="A man with a beard with 2 thumbs up smiling">
+        </div>
+      <div id="links">
+        <ul>
+          <li><a href="Pages/about.html">About</a></li>
+          <li><a href="Pages/skills.html">Skills</a></li>
+        </ul>
+      </div>  
+      <div id="social">
+        <div>
+        <a href="https://twitter.com/Nei1dor" target="_blank">
+          <img class="socialIcon" src="../Images/twitter.png">
+        </a>
+      </div>
+      <div>
+        <a href="mailto:d026481i@student.staffs.ac.uk">
+          <img class="socialIcon" src="../Images/email.png">
+        </a>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/neil-davis-562a88114/" target="_blank">
+          <img class="socialIcon" src="../Images/linkedin.png">
+        </a>
+      </div>
+      </div>
+    </div>
   </body>
 </html>
